# expert-broccoli

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: growops-pages.yml
public/: manifest.webmanifest  sw.js
scripts/: lint.mjs  prepare-pages.mjs  test.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: schema.sql
src-tauri/src/: main.rs
src/components/: ui.tsx
src/data/: seedData.ts
src/domain/: autoPlanner.ts  compatibility.ts  csv.ts  datePlanning.ts  diagnostics.ts  layout.ts  recommendations.ts  restore.ts  supplies.ts  tasks.ts  types.ts  validators.ts
src/features/growops/: GrowOpsModule.tsx
src/features/growops/engines/: growOpsEngines.ts
src/features/growops/types/: growOpsTypes.ts
src/lib/: utils.ts
src/storage/: repository.ts
tests/: auto-planner.test.mjs  compatibility.test.mjs  diagnostics.test.mjs  growops-module.test.mjs  layout-labels.test.mjs  planning-tasks-backup.test.mjs  restore-traceability.test.mjs  web-pwa.test.mjs
