[package]
name = "growops_planner"
version = "0.1.16"
description = "Offline-first desktop crop planning and grow operations app"
authors = ["GrowOps Planner"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
